# MuseScore

./: .gitmodules  CMakeLists.txt
libmscore/: CMakeLists.txt  barline.cpp  beam.h  chord.cpp  chord.h  cmd.cpp  excerpt.cpp  hook.cpp  jianpubeam.cpp  jianpubeam.h  jianpuchord.cpp  jianpuhook.cpp  jianpunote.cpp  jianpunote.h  jianpurest.cpp  keysig.cpp  layout.cpp  measure.cpp  mscore.h  note.cpp  note.h  notedot.h  octavedot.cpp  octavedot.h  read114.cpp  rest.h  score.cpp  scoreElement.cpp  staff.cpp  staff.h  stafftype.cpp  stafftype.h  stem.cpp  timesig.cpp  types.h
mscore/: editstafftype.cpp  instrdialog.cpp  instrwidget.cpp  keyb.cpp  scoreview.cpp
mtest/libmscore/beam/: tst_beam.cpp
src/: CMakeLists.txt
src/extractscore/: CMakeLists.txt  aixlog.hpp  genmidi.cpp  main.cpp  parallel.cpp  sequence.pb.cc  sequence.pb.h  sequence.proto  single.cpp  utils.cpp  utils.h
src/framework/midi_old/: CMakeLists.txt  exportmidi.cpp  exportmidi.h
src/libmscore/: barline.cpp  bend.cpp  changeMap.h  dynamic.cpp  figuredbass.cpp  fret.cpp  glissando.cpp  harmony.cpp  layout.cpp  mmrest.cpp  note.cpp  stafftype.cpp  style.cpp  symbol.cpp  textbase.cpp  textframe.cpp  tremolo.cpp
src/parallel/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
